writing ethics paper

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 @misc{sarto_disneys_2021,
 	type = {News},
-	title = {Disney’s {Immersive}, {Interactive} ‘{Baymax} {Dreams}’ {Short} {Premieres} at {Sundance}},
+	title = {Disney’s Immersive, Interactive ‘Baymax Dreams’ Short Premieres at Sundance},
 	url = {https://www.awn.com/news/disneys-immersive-interactive-baymax-dreams-short-premieres-sundance},
 	abstract = {Studio’s first interactive episode, part of the festival’s New Frontier Gallery, uses interactive cloud streaming technology to enable seamless interaction and high-end graphics on mobile platforms.},
 	language = {en},
@@ -83,5 +83,52 @@
 	month = jun,
 	year = {2015},
 }
+
+@article{handTrack.js_Dibia2017,
+  author = {Victor, Dibia},
+  title = {HandTrack: A Library For Prototyping Real-time Hand TrackingInterfaces using Convolutional Neural Networks},
+  year = {2017},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/victordibia/handtracking/tree/master/docs/handtrack.pdf}, 
+}
+
+@article{trifonova_software_2008,
+	title = {Software engineering issues in interactive installation art},
+	volume = {1},
+	issn = {1754-8853, 1754-8861},
+	url = {http://www.inderscience.com/link.php?id=19882},
+	doi = {10.1504/IJART.2008.019882},
+	abstract = {Software engineering has been in contact with new media art for years, although the connections between the two fields have rarely been explicit. In this article we discuss the important software engineering issues that appear in one of the new media art subfields, namely interactive installation art. Our deductions and suggestions are based mainly on reports available in the literature (i.e. published papers). Interactive installation art is often heavily dependent on software and thus software engineering issues are important to consider. Software requirements, which are vague and frequently changeable, appear to be one of the major and most difficult issues to be considered in the development of interactive installation. Timely evaluation, validation and testing with potential users are helpful for successful completion of the artwork Special attention should be paid to the choice of process model and software architecture to allow flexibility. The final goal is to provide a road map for artists who need software engineering skills to communicate with software engineers and/or to act themselves as programmers or software engineers of their artworks. Additionally, software engineers who start working with interactive installation art will profit from this summary of relevant reports.},
+	language = {en},
+	number = {1},
+	urldate = {2022-04-25},
+	journal = {International Journal of Arts and Technology},
+	author = {Trifonova, Anna and Jaccheri, Letizia and Bergaust, Kristin},
+	year = {2008},
+	pages = {43},
+	file = {Trifonova et al. - 2008 - Software engineering issues in interactive install.pdf:C\:\\Users\\joaqu\\Zotero\\storage\\AIZ79R6T\\Trifonova et al. - 2008 - Software engineering issues in interactive install.pdf:application/pdf},
+}
+
+@article{blood_introduction_nodate,
+	title = {Introduction to {Art}: {Design}, {Context}, and {Meaning}},
+	language = {en},
+	author = {Blood, Peggy and LeMieux, Jeffery and Tekippe, Rita},
+	editor = {Sachant, Pamela},
+	pages = {298},
+	file = {Sachant and LeMieux - Introduction to Art Design, Context, and Meaning.pdf:C\:\\Users\\joaqu\\Zotero\\storage\\52TBFDBS\\Sachant and LeMieux - Introduction to Art Design, Context, and Meaning.pdf:application/pdf},
+}
+
+
+@misc{jackson_how_nodate,
+	title = {How to cite and describe software},
+	url = {https://www.software.ac.uk/how-cite-software},
+	abstract = {By Mike Jackson.},
+	language = {en},
+	urldate = {2022-04-25},
+	author = {Jackson, Mike},
+	file = {Snapshot:C\:\\Users\\joaqu\\Zotero\\storage\\ZY249YCJ\\how-cite-software.html:text/html},
+}
+
 
 
