--- a/template.tex
+++ b/template.tex
@@ -24,11 +24,11 @@
   {}
 
 \pdfinfo{
-    /Title (Clever Name: An Interactive, Generative Art Exhibit)
+    /Title (Computational Queries: An Interactive Art Installation)
     /Author (Joaquín Madrid Larrañaga)
 }
 
-\title{Clever Name: An Interactive, Generative Art Exhibit}
+\title{Computational Queries: An Interactive Art Installation - Ethical Considerations}
 
 \author{Joaquín Madrid Larrañaga}
 \affiliation{Occidental College}
@@ -38,41 +38,47 @@
 
 \maketitle
 
-\begin{abstract}
-    
-\end{abstract}
+\section{Introduction}\label{sec:intro}
 
-\section{Introduction}
+Since the 1960s, interactive art exhibits have ethralled artsts and computer scientists alike\cite{trifonova_software_2008}.  By creating digital projections, responsive animations, and live video feeds, artists have blurred the lines between traditional art and technology.  Many of these installations incorporate visuals and audio and ask participants to move, speak, or interact with physical pieces of the exhibit.  As interesting as these exhibits sound, there are many ethical concerns relating to physical accomodations for people with disabilities and content matter of the interactive art form. Specifically, this paper discusses the many ethical concerns relating to ``Computational Queries,'' an interactive art Installation by Joaquín Madrid Larrañaga. 
 
-\section{Problem Context}
+\section{Project Overview}\label{sec:overview}
 
-From interactive sculptures to light projections, the interactive art scene has enthralled audiences throughout the world \cite{sarto_disneys_2021, noauthor_teamlab_2020}. By allowing audiences to interact with these art pieces, artists have added elements of curiosity, wonder, and suspense. This interaction is usually tactile, verbal, or a motion on the part of the audience that causes a change in the art piece itself.  However, interactive art is not the same as generative art.  Generative art does not necessarily involve interaction on the part of the audience, but instead focuses on generating aspects of the art piece over time.  This type of art is typically associated with art pieces that utilize CGI or other technical aspects that rely on computers or code to generate the art piece \cite{sparacino_narrative_2002}. 
-        	
-The focus of this paper surrounds an interactive generative art piece that seeks to explore first time interactions.  The COVID-19 pandemic caused lockdowns and isolations across the world and, as a result, the chances of meeting someone new dropped significantly.  Suddenly, there were not any opportunities for people to gather with strangers in order to grow their social circles.  This interactive art installation aims to explore the experience of meeting something for the first time.  As people began leaving isolation after the COVID-19 vaccine was widely available, they were suddenly thrust into various social situations, many of which involved meeting new people.  However, these interactions are often characterized with polite small talk rather than getting to the meat of a conversation.  All personal interactions are characterized by vulnerability from one of the parties, but most first time interactions neglect this step making a conversation feel impersonal or superficial.  During most first time interactions, each member is carefully testing the waters to see if the other party is trustworthy.  Meeting a new animal eliminates this awkward phase of small talk.  Most times animals just want to know if people are a threat, neutral, or an ally.  This categorization is determined through careful sensory inputs such as sniffing, licking, and making noises.  At the same time, people are careful when they meet a new animal in case the animal reacts in an unpredictable way.  For the purposes of this project, interacting with an animal also eliminates the need to connect through language forcing the user to interact with the character through movement and emotion. By generating a fictional character that realistically responds to human interactions, each observer can experience what it is like to gain the trust of a pet for the first time… along with all the unpredictability that comes with interacting with animals. 
+``Computational Queries'' is an interactive art installation that incorporates user movement and responsive projections to create a geometric pattern that shifts and changes according to the position of the user.  A camera interprets the position of a user's hand using open source hand tracking technology and the xy coordinates of the user's hand is fed into the program which generates an immediate response in the animation at that coordinate. In this way, a user can wave their hand around in front of the camera and the geometric patten will flow and shift in real time. Similar to a game, this installation also has additional levels that users can achieve by completing certain tasks.  For example, if a user waves their hand over a certain coordinate, a different color may appear.  If the user places both of their hands at that coordinate and moves them in opposite directions, a space will be opened in the pattern and a new pattern will emerge.  This new level will have a different type of interaction and a different task that must be completed to move on to the next level.  After 5 levels, the installation will return back to the beginning.  As such, users will be able to spend as little or as much time interacting with the installation as they would like. Users who spend more time will discover more easter eggs, but users who spend less time will still be able to interact with and enjoy the installation without feeling confused about how to operate the installation.  In order to aid with any confusion, there will be visual hints and motions to encourage user interaction. 
 
+\section{Ethical Design}\label{sec:design}
 
-\section{Technical Background}
+In the textbook ``Introduction to Art: Design, Context, and Meaning,'' \cite{blood_introduction_nodate}the authors caution against different types of unethical practices when creating an art piece.  Chapter 11, ``Art and Ethics'' warns against `appropriation' or the act of incorporating another artist's work into their own without any change or edits and without acknowledgement or credit. Similar to plagarism, this type of artistic appropriation not only steals intellectual property from the original artist, but also damages the credibility of the emerging artist.  While artists often borrow ideas, aesthetics, or even entire pieces from other artists, ``Introduction to Art...'' makes the distinction that these artists are intentionally altering the original idea in order to comment on it's original meaning or to recontextualize it in a new setting. In this way, new artists are still bringing their own intentions and ideas to the original work.  However, it is difficult to characterize exactly what `recontextualize' means. 
 
-At the highest level, this installation focuses on human movement as the primary way of interacting with a computer.  This movement will be captured by a camera that transmits a live video feed into the computer.  By using JMyron \cite{noauthor_myron_nodate}, a video capture and computer vision software, the computer will be able to recognize different actions performed by the user. Then, these actions will be categorized and used to inform an algorithm to determine what the CGI character does.  This character will be created using OpenGL, a python based CGI software \cite{andreussi_realtimerendering_nodate}.  Specifically, a character will be designed and rigged using OpenGL, but it’s behavior (and therefore movement) will be dictated by a Markov chain.  Markov chains offer a powerful directed stochastic form of artificial intelligence where the computer is given a predetermined tree of possible actions based upon the previous action.  Then, according to some trained or predetermined probabiity, the computer will choose a path down the Markov chain. This Markov chain will take the user’s behavior into consideration and then determine the next logical response according to some probability.  There is a possibility that this probability can be determined by training the Markov chain, but these probabilities will likely be randomized. 
-By categorizing the user’s movements into a type of emotion or intention, the Markov chain can determine an appropriate response, rather than trying to respond to the infinite number of possible movements by the user on a case by case basis. Similarly, the Markov chain limits the amount of possible reactions by the CGI character, thereby limiting the amount of animation that needs to be prepared. 
+``Computational Queries'' draws a lot of inspiration from Akash Nihilani, an artist known for his 3D geometric illusions. Specifically, his interactive geometric series called ``Projections'' from 2015.  These interactive projections incorporate different geometric patterns that flow and ebb as users run their hands along the wall that the projections are screened on. As these geometric patterns move, bright colors are revealed in the space between each shape.  In a very similar way, ``Computational Queries'' will ask users to wave their hands in front of geometric patterns in order to reveal another `level' of the game.  While ``Computational Queries'' will have a different color scheme and type of user interaction than ``Projections,'' the two installations are still very similar.  
 
+It is worth mentioning that Chapter 11 also mentions ethical considerations relating to politics, religion, and sexuality.  However, ``Computational Queries'' does not include any displays of politics, religion, or sexuality so no further discussion into these subjects will be needed.
 
-\section{Prior Work}
+\section{Ethical Interaction}\label{sec:interaction}
 
-\citetitle{kwon_real-time_nodate} by \citeauthor{kwon_real-time_nodate} highlights many interactive generative art exhibits from the early 2000s. In 2003, Scott Snibbe created a visualization that recorded users' shadows and played them back allowing the user to add new shadows to the loop - similar to a guitar feedback loop.  Then, in 2015, Philip Worthington created the installation ``Shadow Monsters`` which used machine learning to recognize specific shapes and features in a user's shadow and modify it \cite{houston_public_media_mfah_2015}.  For example, shadows that look like circles will be made into eyes, and shadows that look like intersecting lines will be made into mouths.  This transformation happens in real time and artificial extremeties are added in real time to the shadow. These two installations forcus on modifying shadows from the user. However, ``Future You`` (2019) from Universal Everything, a technological art company, focuses on using the user as a puppeteer of sorts to animate a unique CGI character \cite{noauthor_future_2019}. This CGI character is a humanoid, futuristic being that is unique for each user based upon predetermined variables. Additionally, this character undergoes an evolution every 5 seconds becoming more complex the longer a user interacts with it.  In this way, the program is generating and modifying the art based upon the user's actions according to various variables (time and appearance).  This paper describes an art installation that uses various aspects from all of this previous work. 
+At the highest level, this installation focuses on human movement as the primary way of interacting with a computer.  Unfortunately, not all users will be able to interact with the installation.  Hand amputees will not be able to interact since the hand tracking software will not be able to accurately capture their arm movements. Furthermore, users with motor inhibitions may not be able to accurately complete the motions needed to advance to the next level.  As it stands currently, ``Computational Queries'' is not suited for users without traditional motor capabilities. 
 
+In addition, this installation relies heavily on visual feedback for the user.  Users are visually instructed how to interact with the exhibit and then, when they are interacting, the installation responds to their movements visually.  Furthernore, people who interact with the exhibit will be visually prompted hints on screen as well as given visual feedback as a metric for success through the levels. As such, users with visual impairments will not experience any difference as they physically interact with the installation. 
 
-\section{Methods}
+\section{Ethical Computation}\label{sec:computation}
+This installation makes use of several open source softwares. However it is imporant to mention the difference between art appropriation as defined above and ethical software incorporation.  The open source software movement aims to encourage the creation of software that is widely shared and available free of charge \cite{jackson_how_nodate}. ``Computational Queries'' collects user input through a camera that transmits a live video feed into the computer. This video feed is then analyzed using open source hand tracking software called handtrack.js \cite{handTrack.js_Dibia2017}.  While it is easy to cite the software in the context of this paper, this literature review of interactive art installations prior to 2008 suggests that there is not a precedent for citing open source software that is used in an art installation.  As such, the considerations that apply to art appropriation are typically not followed for software when discussing art installtions. 
 
-\section{Evaluation}
+\section{Suggestions for Improvment}\label{sec:suggestions}
+After detailing all of the ethical shortcomings listed above, below are some concrete suggestions to improve the ethical considerations of this art installation. 
 
-\section{Ethical Considerations}
+\subsection{Proper Credits}\label{subsec:credits}
+As mentioned in \S 3, proper credit where credit is due is integral from an academic standpoint.  Proper credits to Akash Nihilani as the inspiration to this piece must be included in the installation if not in the projection itself. This may take form as a plaque, a pamphlet, or an overlay on the projection.  Along these lines, any other designers or projection art that influence ``Computational Queries'' should be included. 
 
-\section{Limitations, Future Work, and Conclusion}
+\subsection{Accessibility}\label{subsec:accessibility}
+\S 4 details the many accessibility issues related to interacting with the art installation. Providing additional ways to interact with the piece becomes integral when dealing with differently abled people. Providing a joystick controller, handheld mouse, or eye tracking software as inputs to determine the position of the movement allows differently abled people alternatives ways to interact that don't involve their hands. 
 
-\section{Appendices}
+In addition, steps must be taken to include blind/low vision participants. By including a compelling soundscape that changes as a user interacts, the installation can mimic the visual outputs aurally. For example, as the user interacts with the pattern by moving their hands, the music could change or add a sound.  In this way, blind and low vision users can still interact with the exhibit. 
 
-\section{Conclusion}
+\subsection{Ethically Compliant Software}\label{subsec:software}
+``Computational Queries'' does not collect nor store data from people who use the installation. However, since this project uses open source softwares, it is important to confirm that these softwares also do not collect nor store user data. Along the same lines, special considerations should be made to ensure that these open sourced softwares employ ethically sourced data sets. 
+
+\section{Conclusion}\label{sec:conclusion}
+This paper aims to critically examine the interactive art installation, ``Computational Queries''. Through many ethical lenses, this project falls short of being equitable and fails to correctly situate itself among other installations.  This exhibit does not fairly credit all contributing creatives, essentially ostracizes differently abled people and potentially makes use of unethical open source softwares. Though several suggestions for improvement were given, the project as it stands does not meet the lowest of ethical standards and therefore should not continue without making critical changes to address the severe ethical concerns raised. 
 
 \printbibliography 
 
